--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div>
 </section>
 
-<!-- Features -->
+<!-- Why Choose Us Section -->
 <section class="features" id="features">
   <div class="container">
     <div class="section-title">
@@ -109,22 +109,162 @@
       <p>We provide premium solutions with great support.</p>
     </div>
     <div class="features-grid">
-      <div class="feature-card"><i class="fas fa-check-circle"></i><h3>Quality Code</h3><p>Clean, well-documented code following best practices.</p></div>
-      <div class="feature-card"><i class="fas fa-mobile-alt"></i><h3>Responsive</h3><p>Works perfectly on all devices from desktop to mobile.</p></div>
-      <div class="feature-card"><i class="fas fa-headset"></i><h3>Support</h3><p>Get 6 months of free technical support with purchase.</p></div>
-      <div class="feature-card"><i class="fas fa-sync"></i><h3>Free Updates</h3><p>Receive free updates for one year after purchase.</p></div>
+      <div class="feature-card">
+        <i class="fas fa-check-circle"></i>
+        <h3>Quality Code</h3>
+        <p>Clean, well-documented code following best practices.</p>
+      </div>
+      <div class="feature-card">
+        <i class="fas fa-mobile-alt"></i>
+        <h3>Responsive Design</h3>
+        <p>Works perfectly on all devices from desktop to mobile.</p>
+      </div>
+      <div class="feature-card">
+        <i class="fas fa-headset"></i>
+        <h3>24/7 Support</h3>
+        <p>Get 6 months of free technical support with purchase.</p>
+      </div>
+      <div class="feature-card">
+        <i class="fas fa-sync"></i>
+        <h3>Free Updates</h3>
+        <p>Receive free updates for one year after purchase.</p>
+      </div>
+      <div class="feature-card">
+        <i class="fas fa-rocket"></i>
+        <h3>Fast Delivery</h3>
+        <p>Get your project delivered within promised timelines.</p>
+      </div>
+      <div class="feature-card">
+        <i class="fas fa-lock"></i>
+        <h3>Secure Solutions</h3>
+        <p>All our products include security best practices.</p>
+      </div>
     </div>
   </div>
 </section>
 
-<!-- Testimonials -->
+<!-- Customer Reviews Section -->
 <section class="testimonials" id="testimonials">
   <div class="container">
-    <div class="section-title"><h2>Customer Reviews</h2></div>
+    <div class="section-title">
+      <h2>Customer Reviews</h2>
+      <p>See what our clients say about our products and services.</p>
+    </div>
     <div class="testimonial-grid">
-      <div class="testimonial-card"><div class="testimonial-text">"Amazing e-commerce website, exceeded expectations! The code quality is exceptional and the support team was very helpful throughout the setup process."</div><div class="testimonial-author"><div class="author-img">JD</div><div class="author-info"><h4>John Doe</h4><p>Store Owner</p></div></div></div>
-      <div class="testimonial-card"><div class="testimonial-text">"Task manager script boosted team productivity! We've seen a 40% increase in project completion rate since implementing this solution."</div><div class="testimonial-author"><div class="author-img">SM</div><div class="author-info"><h4>Sarah Miller</h4><p>Project Manager</p></div></div></div>
-      <div class="testimonial-card"><div class="testimonial-text">"High-quality blog platform, SEO-friendly and fast. My organic traffic increased by 65% in just three months after migrating to this platform."</div><div class="testimonial-author"><div class="author-img">RJ</div><div class="author-info"><h4>Robert Johnson</h4><p>Content Creator</p></div></div></div>
+      <div class="testimonial-card">
+        <div class="testimonial-text">
+          "Amazing e-commerce website, exceeded expectations! The code quality is exceptional and the support team was very helpful throughout the setup process."
+        </div>
+        <div class="testimonial-author">
+          <div class="author-img">JD</div>
+          <div class="author-info">
+            <h4>John Doe</h4>
+            <p>Store Owner</p>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-card">
+        <div class="testimonial-text">
+          "Task manager script boosted team productivity! We've seen a 40% increase in project completion rate since implementing this solution."
+        </div>
+        <div class="testimonial-author">
+          <div class="author-img">SM</div>
+          <div class="author-info">
+            <h4>Sarah Miller</h4>
+            <p>Project Manager</p>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-card">
+        <div class="testimonial-text">
+          "High-quality blog platform, SEO-friendly and fast. My organic traffic increased by 65% in just three months after migrating to this platform."
+        </div>
+        <div class="testimonial-author">
+          <div class="author-img">RJ</div>
+          <div class="author-info">
+            <h4>Robert Johnson</h4>
+            <p>Content Creator</p>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-card">
+        <div class="testimonial-text">
+          "The customer support is exceptional. They helped me customize the script exactly how I needed it. Highly recommended!"
+        </div>
+        <div class="testimonial-author">
+          <div class="author-img">AK</div>
+          <div class="author-info">
+            <h4>Amisha Kumar</h4>
+            <p>Business Owner</p>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-card">
+        <div class="testimonial-text">
+          "I've tried several similar products, but CodeCraft's solutions are by far the most polished and well-documented."
+        </div>
+        <div class="testimonial-author">
+          <div class="author-img">TP</div>
+          <div class="author-info">
+            <h4>Thomas Parker</h4>
+            <p>Web Developer</p>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-card">
+        <div class="testimonial-text">
+          "The e-commerce platform has everything we needed and more. Setup was straightforward and the documentation is excellent."
+        </div>
+        <div class="testimonial-author">
+          <div class="author-img">LW</div>
+          <div class="author-info">
+            <h4>Lisa Wong</h4>
+            <p>E-commerce Manager</p>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -156,9 +296,28 @@
     </div>
     
     <div class="footer-content">
-      <div class="footer-column"><h3>CodeCraft</h3><p>Providing premium websites & scripts for businesses worldwide.</p></div>
-      <div class="footer-column"><h3>Quick Links</h3><a href="#home">Home</a><a href="#products">Products</a><a href="#features">Features</a><a href="#testimonials">Testimonials</a></div>
-      <div class="footer-column"><h3>Contact Us</h3><p><i class="fas fa-envelope"></i> support@codecraft.com</p><p><i class="fas fa-phone"></i> +1 (123) 456-7890</p><div class="social-links"><a href="#"><i class="fab fa-github"></i></a><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i class="fab fa-linkedin-in"></i></a></div></div>
+      <div class="footer-column">
+        <h3>CodeCraft</h3>
+        <p>Providing premium websites & scripts for businesses worldwide.</p>
+      </div>
+      <div class="footer-column">
+        <h3>Quick Links</h3>
+        <a href="#home">Home</a>
+        <a href="#products">Products</a>
+        <a href="#features">Features</a>
+        <a href="#testimonials">Testimonials</a>
+      </div>
+      <div class="footer-column">
+        <h3>Contact Us</h3>
+        <p><i class="fas fa-envelope"></i> support@codecraft.com</p>
+        <p><i class="fas fa-phone"></i> +1 (123) 456-7890</p>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
     </div>
     <div class="copyright">&copy; 2025 CodeCraft. All rights reserved.</div>
   </div>
