--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="header-content">
       <div class="logo"><i class="fas fa-code"></i> CodeCraft</div>
       <button class="mobile-menu-btn"><i class="fas fa-bars"></i></button>
+       <!-- ✅ Dark/Light Mode Toggle Button -->
+      <button class="theme-toggle" id="themeToggle">🌙 Dark Mode</button>
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
