--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodeCraft - Premium Websites & Scripts</title>
+  <title>phoenix - Premium Websites & Scripts</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
 <header>
   <div class="container">
     <div class="header-content">
-      <div class="logo"><i class="fas fa-code"></i> CodeCraft</div>
+      <div class="logo"><i class="fas fa-code"></i> phoenix solution</div>
       <button class="mobile-menu-btn"><i class="fas fa-bars"></i></button>
        <!-- ✅ Dark/Light Mode Toggle Button -->
       <button class="theme-toggle" id="themeToggle">🌙 Dark Mode</button>
