--- a/index.html
+++ b/index.html
@@ -1,27 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PHOENIX SOLUTION</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Phoenix Store</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="logo-section">
-            <img src="phoenix officiol logo.png" alt="Phoenix Logo">
-            <h1>PHOENIX SOLUTION</h1>
-        </div>
-         
+
+  <!-- 🧭 Header -->
+  <header>
+    <div class="logo">
+      <img src="phoenix officiol logo.png" alt="Logo">
+      <h1>PHOENIX STORE</h1>
+    </div>
 
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
+        <li><a href="#">Products</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    </header>
+  </header>
+
+  <!-- 🛍️ Store Section -->
+  <section class="store">
+    <h2>Our Latest Products</h2>
+
+    <div class="products">
+
+      <!-- Product 1 -->
+      <div class="card">
+        <h3>Portfolio Web</h3>
+        <img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://images.ctfassets.net/wp1lcwdav1p1/gzZpBDV3nX1AWytfLhbgs/d528553697d959544c8ca5b80b6d8beb/web_developer.png?w=1500&h=680&q=60&fit=fill&f=faces&fm=jpg&fl=progressive&auto=format%2Ccompress&dpr=1&w=1000" alt="Product 1">
+        <a href="https://mwzrenovation.com/" target="_blank">
+          <button>View Now</button>
+        </a>
+        <button>Order Now</button>
+      </div>
+
+      <!-- Product 2 -->
+      <div class="card">
+        <img src="product2.jpg" alt="Product 2">
+        <h3>Business Website</h3>
+        <p>Modern website design for your brand 💼</p>
+        <a href="https://phoenix9248756.github.io/webstore/" target="_blank">
+          <button>View Now</button>
+        </a>
+        <button>Order Now</button>
+      </div>
+
+      <!-- Product 3 -->
+      <div class="card">
+        <img src="product3.jpg" alt="Product 3">
+        <h3>Solar Kit</h3>
+        <p>Affordable solar energy for homes ☀️</p>
+        <a href="https://example.com" target="_blank">
+          <button>View Now</button>
+        </a>
+        <button>Order Now</button>
+      </div>
+
+    </div>
+  </section>
+
 </body>
 </html>
