--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <div class="hero-right">
-    <img src="chek pik.png" alt="Phoenix Banner">
+   <img src="chek%20pik.png" alt="Phoenix Banner">
   </div>
 </section>
 
