--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   // 1) Disable right-click context menu
   document.addEventListener('contextmenu', function(e){
     e.preventDefault();
-    notify('Right-click disabled');
+    notify('console');
   }, {passive:false});
 
   // 2) Disable key shortcuts (F12, Ctrl+Shift+I, Ctrl+Shift+C, Ctrl+U, Ctrl+P, Ctrl+S)
